# Ascii-Renderer

./: CMakeLists.txt  README.md
src/: main.c
src/primitives/: cube.c  cube.h  triangle.h  vertex.h
src/renderer/: camera.c  camera.h  image.c  image.h  rasterizer.c  rasterizer.h  render_settings.h
src/utils/: README.md
